--- a/blog_client/src/styles/globals.css
+++ b/blog_client/src/styles/globals.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+body {
+    background: #595858;
+    color: #fff;
+}
+
 header {
     padding: 20px 2%;
     display: flex;
@@ -15,4 +25,11 @@ main {
     padding: 20px 2%;
     display: flex;
     flex-direction: column;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
