--- a/blog_client/src/styles/Home.module.css
+++ b/blog_client/src/styles/Home.module.css
@@ -68,6 +68,7 @@
 
 .pageTitle {
     text-align: center;
+    margin: 50px 0 30px;
 }
 
 .logoutButton {
@@ -79,4 +80,5 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
