--- a/blog_client/src/styles/globals.css
+++ b/blog_client/src/styles/globals.css
@@ -56,3 +56,11 @@ button {
     background: transparent;
     cursor: pointer;
 }
+
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
