--- a/blog_client/src/styles/Home.module.css
+++ b/blog_client/src/styles/Home.module.css
@@ -17,24 +17,25 @@
 }
 
 .postCardLink {
+    box-shadow: 0px 5px 12px -4px #2e2d2d;
+    cursor: pointer;
+    display: block;
+    width: 32%;
+}
+
+.postCardLink:hover {
+    box-shadow: none;
 }
 
 .postCard {
     position: relative;
     z-index: 1;
-    width: 32%;
-    margin: 0 0 40px;
     background: #616060;
-    box-shadow: 0px 5px 12px -4px #2e2d2d;
     text-decoration: none;
     transition: all .3s ease; 
     padding: 20px;
-    cursor: pointer;
 }
 
-.postCard:hover {
-    box-shadow: none;
-}
 
 .postTitle {
     margin-bottom: 10px;
@@ -73,5 +74,6 @@
 
 .logoutButton {
     width: 100px;
+    margin-left: 30px;
 }
 
