--- a/blog_client/src/styles/globals.css
+++ b/blog_client/src/styles/globals.css
@@ -57,7 +57,12 @@ button {
     cursor: pointer;
 }
 
+button:hover {
+    border: 1px solid transparent;
+}
+
 form {
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
