--- a/blog_client/src/styles/style.module.css
+++ b/blog_client/src/styles/style.module.css
@@ -12,7 +12,7 @@
     display: flex;
     position: relative;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
 }
 
@@ -21,26 +21,41 @@
     cursor: pointer;
     display: block;
     width: 32%;
+    margin-right: 1.3%;
     margin-bottom: 20px;
+    transition: all .3s ease; 
+    background: #616060;
+    text-decoration: none;
 }
 
 .postCardLink:hover {
     box-shadow: none;
 }
 
-.postCard {
-    position: relative;
-    z-index: 1;
-    background: #616060;
-    text-decoration: none;
-    transition: all .3s ease; 
-    padding: 20px;
+.postCardLink:hover .postImage {
+    transform: scale(1.1);
 }
 
+.postImageBox {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+.postImage {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    transition: all .3s ease; 
+}
+
+.postCard {
+    padding: 20px 20px 10px;
+}
 
 .postTitle {
     margin-bottom: 10px;
-    font-size: 1.2em;
+    font-size: 1.1em;
     font-weight: normal;
 }
 
@@ -49,6 +64,7 @@
     font-size: .8em;
     display: flex;
     align-items: center;
+    margin-right: 10px;
 }
 
 .postDate i {
@@ -78,3 +94,30 @@
     margin-left: 30px;
 }
 
+.detailBox {
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    background: #716d6d;
+    padding: 30px;
+}
+
+.blogTitle {
+    font-size: 1.6em;
+    margin-bottom: 20px;
+}
+
+.dateBox {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.blogImage {
+    width: 100%;
+    max-height: 500px;
+    object-fit: cover;
+    margin-bottom: 20px;
+}
